[workspace.package]
version = "0.1.0"
edition = "2021"

[package]
name = "rb-template"
version.workspace = true
authors = ["Wormarz <wormarz@outlook.com>"]
license = "Apache"
description = "A template for rust binary development."
homepage = "https://github.com/Wormarz/rb-template"
repository = "https://github.com/Wormarz/rb-template"
readme = "README.md"
edition.workspace = true

[workspace.dependencies]
log = "0.4.22"
anyhow = "1.0.95"

[dependencies]
component = {path = "./utils/component"}
env_logger = "0.11.6"
log.workspace = true
anyhow.workspace = true

[[bin]]
name = "template"
bench = false
path = "src/main.rs"

[profile.release]
panic = "abort"
strip = true
lto = true

[workspace]
members = ["utils/component", ]

[features]

[dev-dependencies]
assert_cmd = "2.0"